service.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: archapp-service 
spec: 
  selector: 
    app: archapp 
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 8000 
  type: NodePort
