k8s-istio-security.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: django-gateway
spec:
  selector:
    istio: ingressgateway # Uses the default Istio controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: django-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - django-gateway
  http:
  - route:
    - destination:
        host: defense-web-service # Matches your service.yml name
        port:
          number: 80
